--- a/src/style.css
+++ b/src/style.css
@@ -1,18 +1,3 @@
-:root {
-  --primary: #ea40a4;
-  --business: #3a82ee;
-  --personal: var(--primary);
-  --light: #eee;
-  --grey: #888;
-  --dark: #313154;
-  --danger: #ff5b57;
-
-  --shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
-
-  --business-glow: 0px 0px 4px rgba(58, 130, 238, 0.75);
-  --personal-glow: 0px 0px 4px rgba(234, 64, 164, 0.75);
-}
-
 * {
   margin: 0;
   padding: 0;
@@ -20,7 +5,14 @@
   font-family: "montserrat", sans-serif;
 }
 
-input:not([type="radio"]):not([type="checkbox"]),
+input:not([type=radio]):not([type=checkbox]) {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
+  cursor: initial;
+}
+
 button {
   appearance: none;
   border: none;
@@ -30,8 +22,8 @@ button {
 }
 
 body {
-  background: var(--light);
-  color: var(--dark);
+  background: #eee;
+  color: #313154;
 }
 
 section {
@@ -42,14 +34,17 @@ section {
 }
 
 h3 {
-  color: var(--dark);
+  color: #313154;
   font-size: 1rem;
   font-weight: 400;
   margin-bottom: 0.5rem;
 }
 
-input[type="radio"],
-input[type="checkbox"] {
+input[type=radio] {
+  display: none;
+}
+
+input[type=checkbox] {
   display: none;
 }
 
@@ -66,13 +61,13 @@ input:checked ~ .bubble::after {
   width: 20px;
   height: 20px;
   border-radius: 50%;
-  border: 2px solid var(--business);
-  box-shadow: var(--business-glow);
+  border: 2px solid #3a82ee;
+  box-shadow: 0px 0px 4px rgba(58, 130, 238, 0.75);
 }
 
 .bubble.personal {
-  border-color: var(--personal);
-  box-shadow: var(--personal-glow);
+  border-color: #ea40a4;
+  box-shadow: 0px 0px 4px rgba(234, 64, 164, 0.75);
 }
 
 .bubble::after {
@@ -81,13 +76,13 @@ input:checked ~ .bubble::after {
   opacity: 0;
   width: 0px;
   height: 0px;
-  background-color: var(--business);
-  box-shadow: var(--business-glow);
+  background-color: #3a82ee;
+  box-shadow: 0px 0px 4px rgba(58, 130, 238, 0.75);
   border-radius: 50%;
   transition: 0.2s ease-in-out;
 }
 
 .bubble.personal::after {
-  background-color: var(--personal);
-  box-shadow: var(--personal-glow);
+  background-color: #ea40a4;
+  box-shadow: 0px 0px 4px rgba(234, 64, 164, 0.75);
 }
